--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-apple-pay",
-  "version": "0.0.2",
+  "name": "@taxfyle/react-native-apple-pay",
+  "version": "0.0.3",
   "description": "React Native library for accepting payments with Apple Pay.",
   "scripts": {
     "lint": "node_modules/.bin/eslint .",
